--- a/css/Estilos.css
+++ b/css/Estilos.css
@@ -23,10 +23,11 @@ header{
     overflow: hidden;
     transition: all 0.5s ease ;
 }
+
 header h1{
     font-size: 42px;
     color: white;
-    line-height: 150px;
+    line-height: 100px;
     font-weight: 300;
     transition: all 0.3s ease;
 }
@@ -35,16 +36,24 @@ header h1 i{
     font-weight: bold;
     text-transform: uppercase;
 }
-header nav{
+.redes-sociales a{
+    color: rgb(235, 235, 235);
+    text-align: left;
+    box-shadow: 0 1px 0 rgb(0, 0, 0);
+    font-size: 2rem;
+}
+.enlaces{
     position: absolute;
+    position: a;
     bottom: 0;
     height: 60px;
     line-height: 60px;
     width: 100%;
     background: rgba(232, 63, 0, 0.8);
 }
-header nav a{
-    color: white;
+.enlaces a{
+    
+    color: rgb(255, 255, 255);
     display: inline-block;
     padding: 10px 15px;
     line-height: 1;
@@ -75,7 +84,7 @@ p{
 section{
     margin: 10px;
     padding: 20px;
-    background: white;
+    background: rgb(109, 109, 109);
     border-radius: 4px;
     box-shadow: 0 1px 0 rgba(0, 0, 0, 0.2);
 }
@@ -89,14 +98,13 @@ body.sticky-header header{
 body.sticky-header header h1{
     transform: scale(0,0);
 }
-<<<<<<< HEAD
 /*PIE DE PAGINA*/
 footer{
     max-width: 1400px;
-    background: #000;
+    background: rgb(129, 129, 129);
     margin: 0 auto;
     border-radius: 0 0 20px 20px;
-    color:#ffff;
+    color:rgb(2, 2, 2);
     text-align: center;
     padding: 30px;
     box-sizing: border-box;
@@ -104,9 +112,3 @@ footer{
     font-size: 10px;
 
 }
-=======
-
-
-/** Invitados **/
-
->>>>>>> ccba4881b71f4921cc19cd2bee62e189b6cdb505
