--- a/css/Estilos.css
+++ b/css/Estilos.css
@@ -112,35 +112,36 @@ footer{
     font-size: 10px;
 
 }
+
 .reservaciones{
+    display: inline-flex;
+    width: 100%;
+}
+.reservacion{
     border-color: black;
     border-width: 1px;
     border-style: double;
     padding:10px;
     background-color:coral;
     border-style: double;
-    float: left;
-    width: calc(30% - 20px);
+    width: 30%;
     margin-left: 10px;
     margin-right: 10px;
     margin-bottom: 20px;
-    
-
 }
+
 .pagos{
-    border-top-width: 10px;
     border-color: black;
+    border-width: 1px;
     border-style: double;
-    width: 45%;;
+    padding:10px;
     background-color:coral;
+    border-style: double;
+    width: 30%;
+    margin-left: 10px;
+    margin-right: 10px;
+    margin-bottom: 20px;
     text-align: center;
-    border: 1px solid #ccc;
-    padding: 10 px;
-    margin: 1rem;
-    margin-top: auto;
-    margin-left: auto;
-    margin-right: auto;
-    margin-bottom: 20px
 
 }
 .frmpago{
@@ -148,3 +149,5 @@ footer{
     margin-left: auto;
     margin-right: auto;
 }
+
+
