--- a/css/Estilos.css
+++ b/css/Estilos.css
@@ -116,21 +116,19 @@ footer{
 .reservaciones{
     display: inline-flex;
     width: 100%;
+    background-color:orangered;
 }
 .reservacion{
     border-color: black;
     border-width: 1px;
     border-style: double;
     padding:10px;
-    background-color:coral;
+    background-color:coral ;
     border-style: double;
-<<<<<<< HEAD
-    width: calc(30% - 20px);
-=======
-    width: 30%;
->>>>>>> 011be69d668fd8d360e9114709bf1cb42b6cdb09
-    margin-left: 10px;
-    margin-right: 10px;
+    width: 33%;
+    margin-top: 20px;
+    margin-left: 20px;
+    margin-right: 20px;
     margin-bottom: 20px;
 }
 
@@ -142,18 +140,12 @@ footer{
     background-color:coral;
     border-style: double;
     width: 30%;
-    margin-left: 10px;
-    margin-right: 10px;
-    margin-bottom: 20px;
     text-align: center;
-<<<<<<< HEAD
     padding: 10 px;
-    margin-top: auto;
+    margin-top: 30px;
     margin-left: auto;
     margin-right: auto;
-    margin-bottom: 20px
-=======
->>>>>>> 011be69d668fd8d360e9114709bf1cb42b6cdb09
+    margin-bottom: 20px;
 
 }
 .frmpago{
