--- a/css/Estilos.css
+++ b/css/Estilos.css
@@ -112,3 +112,71 @@ footer{
     font-size: 10px;
 
 }
+
+.reservaciones{
+    display: inline-flex;
+    width: 100%;
+}
+.reservacion{
+    border-color: black;
+    border-width: 1px;
+    border-style: double;
+    padding:10px;
+    background-color:coral;
+    border-style: double;
+    width: 30%;
+    margin-left: 10px;
+    margin-right: 10px;
+    margin-bottom: 20px;
+}
+
+.pagos{
+    border-color: black;
+    border-width: 1px;
+    border-style: double;
+    padding:10px;
+    background-color:coral;
+    border-style: double;
+    width: 30%;
+    margin-left: 10px;
+    margin-right: 10px;
+    margin-bottom: 20px;
+    text-align: center;
+
+}
+.frmpago{
+    width: 200px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+
+/*--------------------------------------------------------------
+# Footer
+--------------------------------------------------------------*/
+#footer {
+    background: #fff;
+    box-shadow: 0px 0px 12px 0px rgba(0, 0, 0, 0.1);
+    padding: 30px 0;
+    color: #333;
+    font-size: 14px;
+  }
+  
+  #footer .credits {
+    font-size: 13px;
+    color: #888;
+  }
+  
+  #footer .footer-links a {
+    color: #666;
+    padding-left: 15px;
+  }
+  
+  #footer .footer-links a:first-child {
+    padding-left: 0;
+  }
+  
+  #footer .footer-links a:hover {
+    color: #1dc8cd;
+  }
+
