--- a/calendar.css
+++ b/calendar.css
@@ -10,6 +10,7 @@ body {
     font: 13px/1.5 "Helvetica Neue", Helvatica, Arial, san-serif; 
     display:table; 
 }
+
 #cal .header { 
     cursor:default; 
     background: #cd310d; 
@@ -51,21 +52,21 @@ body {
     right:15%; 
 } 
 .left.hook { 
-    left: 15    %; 
+    left: 15%; 
 }
 #cal .header .button { 
     width:24px; 
     text-align:center; 
     position:absolute; 
 } 
-.left.button { 
+#cal .header .left.button { 
     left:0; 
     -webkit-border-top-left-radius: 5px; 
     -moz-border-radius-topleft: 5px; 
     border-top-left-radius: 5px; 
     border-right:1px solid #ae2a0c; 
 } 
-.right.button { 
+#cal .header .right.button { 
     right:0; 
     top:0; 
     border-left:1px solid #ae2a0c; 
@@ -118,8 +119,8 @@ body {
     background:#CD310D; 
     background: -moz-linear-gradient(top, #b32b0c, #cd310d); 
     background: -webkit-gradient(linear, left top, left bottom, from(#b32b0c), to(#cd310d)); 
-    -moz-box-shadow:0px 0px 0px; 
-    -webkit-box-shadow:0px 0px 0px; 
+   /* -moz-box-shadow:0px 0px 0px; 
+    -webkit-box-shadow:0px 0px 0px;*/ 
 }
 #cal #cal-frame td span { 
     font-size:80%; 
