--- a/css/Calendario.css
+++ b/css/Calendario.css
@@ -6,17 +6,21 @@
     box-sizing: border-box;
 
 }
-body{
-    background: #ecf0f1;
-    font-family: sans-serif;
-    padding-top: 200px;
-    transition: padding-top 0.5s ease;
 
+:root{
+    --colorPrimario: #86C232;
+    --colorSecundario: #61892F;
+    --colorFondo: #222629;
+    --colorFondo2: #42494e;
+    --colorFondo3: #7b8792;
+    --colorTexto: white;
+    --fuenteTitulos: 'Anton', sans-serif;
 }
+/**HEADER**/
 header{
     width: 100%;
     height: 200px;
-    background: #246092;
+    background: var(--colorFondo);
     text-align: center;
     position: fixed;
     top: 0;
@@ -26,7 +30,7 @@ header{
 
 header h1{
     font-size: 42px;
-    color: white;
+    color:var(--colorSecundario);
     line-height: 100px;
     font-weight: 300;
     transition: all 0.3s ease;
@@ -37,9 +41,9 @@ header h1 i{
     text-transform: uppercase;
 }
 .redes-sociales a{
-    color: rgb(235, 235, 235);
+    color: var(--colorSecundario);
     text-align: left;
-    box-shadow: 0 1px 0 rgb(0, 0, 0);
+    box-shadow: 0 1px 0 var(--colorFondo2);
     font-size: 2rem;
 }
 .enlaces{
@@ -49,11 +53,10 @@ header h1 i{
     height: 60px;
     line-height: 60px;
     width: 100%;
-    background: rgba(71, 126, 189, 0.8);
+    background: var(--colorFondo2);
 }
 .enlaces a{
-    
-    color: rgb(245, 245, 245);
+    color: var(--colorPrimario);
     display: inline-block;
     padding: 10px 15px;
     line-height: 1;
@@ -62,20 +65,29 @@ header h1 i{
 }
 
 header nav a:hover{
-    background: rgba(0, 0, 0, 0.2);
+    background:var(--colorFondo3);
 }
 h2{
     font-size: 34px;
+    text-align: center;
     text-transform: uppercase;
     font-weight: 400;
     line-height: 2;
-    color:#2c3e50;
+    color: var(--colorSecundario);
+
+}
+/**BODY**/
+body{
+    background:var(--colorFondo);
+    font-family: sans-serif;
+    padding-top: 200px;
+    transition: padding-top 0.5s ease;
 
 }
 p{
     margin-bottom: 2rem;
     line-height: 2;
-    color:#7f8c8d;
+    color:var(--colorSecundario);
 }
 .wrapper{
     max-width: 800px;
@@ -84,7 +96,6 @@ p{
 section{
     margin: 10px;
     padding: 20px;
-    background: rgb(109, 109, 109);
     border-radius: 4px;
     box-shadow: 0 1px 0 rgba(0, 0, 0, 0.2);
 }
@@ -98,6 +109,76 @@ body.sticky-header header{
 body.sticky-header header h1{
     transform: scale(0,0);
 }
+/**IMAGENES**/
+
+
+.portafolio{
+	width: 90%;
+    max-width: 1400px;
+    margin: auto;
+
+}
+
+.portafolio h1{
+	text-align: center;
+	font-size: 38px;
+	margin: 15px 0px 40px;
+}
+
+.portafolio-container{
+	display: -webkit-box;
+	display: -webkit-flex;
+	display: -ms-flexbox;
+	display: flex;
+	-webkit-box-pack: justify;
+	-webkit-justify-content: space-between;
+	-ms-flex-pack: justify;
+	justify-content: space-between;
+}
+
+.portafolio-item{
+    width: 90%;
+	position: relative;
+	overflow: hidden;
+}
+
+.portafolio-img{
+	-webkit-transition: all 0.5s;
+    transition: all 0.5s;
+    width: 90%;
+    height:50% ;
+
+}
+
+.portafolio-text{
+	position: absolute;
+	bottom: 0;
+	padding: 20px;
+	background: var(--colorFondo2);
+	color: var(--colorTexto);
+	-webkit-transform: translateY(100%);
+	-ms-transform: translateY(100%);
+	transform: translateY(100%);
+	-webkit-transition: all 0.5s ease-out;
+	transition: all 0.5s ease-out;
+}
+
+.portafolio-text p{
+	text-align: center;
+}
+
+.portafolio-item:hover .portafolio-text{
+	-webkit-transform: translateY(0%);
+	-ms-transform: translateY(0%);
+	transform: translateY(0%);
+}
+
+.portafolio-item:hover .portafolio-img{
+	-webkit-transform: scale(1.15);
+	-ms-transform: scale(1.15);
+	transform: scale(1.15);
+}
+
 /**FOOTER**/
 footer{
     max-width: 1400px;
