--- a/css/Estilos.css
+++ b/css/Estilos.css
@@ -152,7 +152,7 @@ footer{
   
 
 
-
+/**RESERVACIONES**/
 .reservaciones{
     display: inline-flex;
     width: 100%;
@@ -249,7 +249,7 @@ input{
 }
 
 .portafolio-item{
-	width: 30%;
+	width: 90%;
 	position: relative;
 	overflow: hidden;
 }
