--- a/css/Calendario.css
+++ b/css/Calendario.css
@@ -137,17 +137,17 @@ body.sticky-header header h1{
 }
 
 .portafolio-item{
-    width: 90%;
+    width: 400px;
 	position: relative;
-	overflow: hidden;
+	
 }
 
 .portafolio-img{
 	-webkit-transition: all 0.5s;
     transition: all 0.5s;
-    width: 90%;
-    height:50% ;
-
+    width: 300px;
+    height:300px;
+    margin: 35px;
 }
 
 .portafolio-text{
@@ -156,9 +156,9 @@ body.sticky-header header h1{
 	padding: 20px;
 	background: var(--colorFondo2);
 	color: var(--colorTexto);
-	-webkit-transform: translateY(100%);
-	-ms-transform: translateY(100%);
-	transform: translateY(100%);
+	-webkit-transform: translateY(50%);
+	-ms-transform: translateY(50%);
+	transform: translateY(25%);
 	-webkit-transition: all 0.5s ease-out;
 	transition: all 0.5s ease-out;
 }
