--- a/css/Calendario.css
+++ b/css/Calendario.css
@@ -8,10 +8,10 @@
 }
 
 :root{
-    --colorPrimario: #86C232;
-    --colorSecundario: #61892F;
+    --colorPrimario: #d11114;
+    --colorSecundario: #f03a3c;
     --colorFondo: #222629;
-    --colorFondo2: #42494e;
+    --colorFondo2: #2d3236;
     --colorFondo3: #7b8792;
     --colorTexto: white;
     --fuenteTitulos: 'Anton', sans-serif;
@@ -62,6 +62,7 @@ header h1 i{
     line-height: 1;
     text-decoration: none;
     border-radius: 5px;
+    font-weight: 500;
 }
 
 header nav a:hover{
